package name change & jar build fix